[-] FO : Fix bug #PSCFV-7880 display wrapping row in cart

--- a/themes/default/css/global.css
+++ b/themes/default/css/global.css
@@ -1264,7 +1264,7 @@ a.iframe {font-weight:bold}
 #order-opc #opc_delivery_methods h3 {margin-top:20px;}
 #order-opc #opc_delivery_methods textarea {
 	height:60px;
-	width:755px;
+	width:723px;
 	border:1px solid #ccc
 }
 
